syntax = "proto3";

package commons.sqlbuilder;

option go_package = "sqlbuilder";

message PageQuery {
    int64 page_size = 1;
    int64 page_index = 2;
}

enum ValueType {
    ValueType_ = 0;
    Int = 1;
    Doubel = 2;
    String = 3;
    Bool = 4;
    Time = 5;
    StringArray = 6;
    IntArray = 7;
    DoubleArray = 8;
    TimeArray = 9;
    Status = 10;
    Statuses = 11;
    PgIntArray = 12;
    PgStringArray = 13;
    PgFloatArray = 14;
}

message Value {
    ValueType value_type = 1;
    int64 int_value = 2;
    double double_value = 3;
    string string_value = 4;
    bool bool_value = 5;
    repeated int64 int_values = 6;
    repeated string string_values = 8;
    repeated double double_values = 9;
}

message JoinCondition {
    string table_name = 1;
    string table_col_name = 2;
    string join_table_col_name = 3;
    string table_alisa = 4;
}

message Condition {
    string col_name = 1;
    string operator = 2;
    Value value = 3;
}

message OrderCondition {
    string name = 1;
    string order = 2;
}

message Query {
    repeated Condition conditions = 1;
    repeated OrderCondition order_conditions = 2;
    PageQuery page = 3;
    bool return_total = 4;
    bool force_page = 5;
    JoinCondition join = 6;
}

message Update {
    int64 id = 1; //必须不为0
    repeated Field fields = 2;
    repeated Condition conditions = 3;
}

message Field {
    string col_name = 1;
    Value field_value = 2;
}

message UpdateResult {
    int64 count = 1;
}

enum RangeType {
    ALL = 0;
    Minute = 1;
    MinuteN = 2;
    Hour = 3;
    Day = 4;
    Week = 5;
    Month = 6;
    Year = 7;

}

message StatisticsTimeRange {
    RangeType type = 1;
    int64 interval = 2;
    int64 start = 3;
    int64 end = 4;
}

enum TaskStatus {
    TaskStatus_ = 0;
    Running = 1;
    Success = 2;
    Error = 3;
}

message StatisticsTask {
    int64 id = 1;
    int64 task = 2;
    int64 start = 3;
    int64 end = 4;
    TaskStatus status = 5;
    string message = 6;
    int64 create_time = 7;
    int64 update_time = 8;
}
